tests/e2e/fail/integer_mixed_width.ep
# COMPILE_ERROR: incompatible operand types u16 and u32
fun main(): void {
    let value = 1u16 + 1u32
}
